<resources>
    <string name="appName">Teacher</string>
    <string name="activityMainAim">Реши ещё %1$s примеров без ошибок, чтобы завершить упражнение.</string>
    <string name="activityMainTaskFinished">Молодец! Упражнение успешно выполнено.</string>
    <string name="activityMainTask">%1$s %2$s %3$s = %4$s</string>
    <string name="button1">1</string>
    <string name="button2">2</string>
    <string name="button3">3</string>
    <string name="button4">4</string>
    <string name="button5">5</string>
    <string name="button6">6</string>
    <string name="button7">7</string>
    <string name="button8">8</string>
    <string name="button9">9</string>
    <string name="button0">0</string>
    <string name="buttonBackspace"><![CDATA[<-]]></string>
    <string name="buttonOk">OK</string>
    <string name="errorDialogTitle">Ошибка!</string>
    <string name="buttonUnderstood">Понятно</string>
    <string name="activityMainError">Не удалось отправить результат на сервер. Проверьте Wi-Fi и нажмите сюда, чтобы попробовать снова.</string>
</resources>